# CS100_Lab06_GitHubActions

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: main.cpp  rectangle.cpp
tests/: perimeter_test.cpp  perimeter_test.hpp  test.cpp  test_area.hpp  test_constructors.hpp
